Restructure and update some code