@@ -3,26 +3,24 @@ package core.algorithms;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class UniqueIntegers {
 
-    public static List<Integer> findUniqueIntegers() {
-        int[] array = {-1, -2, 3, 3, -2};
+    public static void findUniqueIntegers() {
+        int[] array = {-1, -2, 3, 3, 5, -2};
 
-        return findUniqueIntegers(array);
+        findUniqueIntegers(array).forEach(System.out::println);
     }
 
     public static List<Integer> findUniqueIntegers(int[] array) {
-        // Count the frequency of each element
-        Map<Integer, Long> frequencyMap = Arrays.stream(array)
+        return Arrays.stream(array)
             .boxed()
-            .collect(Collectors.groupingBy(e -> e, Collectors.counting()));
-
-        // Filter elements that have a frequency of one
-        return frequencyMap.entrySet().stream()
-            .filter(entry -> entry.getValue() == 1)
+            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
+            .entrySet().stream()
+            .filter(entry -> entry.getValue() == 1L)
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
